# quote-generator

./: Cargo.toml  README.md  install.sh
src/: main.rs
src/cli/: mod.rs
src/quote/: mod.rs
