[package]
name = "quote-generator"
version = "1.0.0"
edition = "2021"
keywords = ["quote" , "generator", "motivationnal quote"]
license = "MIT"
authors = ["Clairmont RAJAONARISON clairmont.rajaonarison@gmail.com"]
description = "This project is a `.deb` package for generating random quote thanks to the `dummyjson` API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3", feature = ["derive"] }

[package.metadata.deb]

name = "quote-generator"
maintainer = "Clairmont RAJAONARISON <clairmont.rajaonarison@gmail.com>"
copyright = "2024, Clairmont RAJAONARISON <clairmont.rajaonarison@gmail.com>"
